# cymphony

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  REVIEW_RESULT.json  REWORK_SMOKE.md  SMOKE_TEST.md  WORKFLOW.example.md  WORKFLOW.md  config.example.yml  pyproject.toml
.claude/: launch.json
docs/: dashboard-smoke-test.md  e2e-qa-rework.md  e2e-smoke-note.md  refactor-plan.md  spec-agent-workflows.md
docs/design/: config-layout.md  config-ownership.md
prompts.example/: execution.md  qa_review.md
scripts/: fake_claude_stream.py  run_dashboard_smoke_test.sh
src/cymphony/: __init__.py  __main__.py  agent.py  config.py  linear.py  logging_.py  models.py  orchestrator.py  preflight.py  review.py  server.py  state.py  state_machine.py  workflow.py  workspace.py
src/cymphony/runners/: __init__.py  base.py  claude.py  codex.py
src/cymphony/services/: __init__.py  linear_service.py  pr_service.py  workspace_service.py
src/cymphony/workflows/: __init__.py  execution.py  qa_review.py
tests/: test_agent.py  test_claude_runner.py  test_codex_plan.py  test_codex_runner.py  test_config.py  test_config_resolution.py  test_execution_workflow.py  test_linear.py  test_main.py  test_orchestrator_ticks.py  test_preflight.py  test_provider_parity.py  test_qa_review.py  test_qa_workflow.py  test_review.py  test_server.py  test_stall_detection.py  test_state.py  test_state_machine.py  test_todo_sync.py  test_validate_transitions.py  test_workflow.py  test_workspace_hooks.py
